# AccMultiwayJoins

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
LFTJ-GPU/: ALFTJ.cuh  CBarrier.cuh  CMakeLists.txt  IndexedTrie.cuh  LFTJ_BFS.cuh  LFTJ_base.h  check_cuda.cu  config.h  edgelist_to_csr.cu  exec_LFTJ.cu  generator_cuda.cuh  helper.cuh  multi_partitioning.cuh  ooc_wrapper.cuh  skewed_writer.cu  types.h  uniform_writer.cu
MHJ-CPU/: CMakeLists.txt  MHJ.cpp  mem_helper.h  my_types.h  task_queue.h  types.h
MHJ-GPU/: BreakPoints.cuh  CMakeLists.txt  IndexedTrie.cuh  LICENSE  QueryProcessor.cuh  README.md  Relation.cuh  SubfixBuffer.cuh  TaskBook.cuh  common_kernels.cuh  conf.h  data_generator.cuh  exec_AMHJ.cu  exec_AMHJ_cuckoo.cu  exec_AMHJ_open_addr.cu  exec_LFTJ.cu  exec_MHJ.cu  exec_MHJ_cuckoo.cu  exec_MHJ_open_addr.cu  exec_PW.cu  exec_el_2_db.cu  exec_iterate_partitions.cu  exec_partition.cu  exec_tbl_2_csv.cu  exec_tbl_2_db.cu  ooc.cuh  skewed_writer_.cu  switch_el.py  temp  types.h  uniform_writer_.cu
MHJ-GPU/HashJoinEPFL/: common.h  hashJoinEPFL.cuh  join-primitives.cuh  types_EPFL.h
MHJ-GPU/Indexing/: build_Trie.cuh  cuckoo_direct.cuh  cuckoo_radix.cuh  cudpp.cuh  linear.cuh  radix_partitioning.cuh
MHJ-GPU/Joins/: AMHJ.cuh  AMHJ_DRO.cuh  AMHJ_DRO_open_addr.cuh  AMHJ_WS.cuh  AMHJ_WS_DRO.cuh  AMHJ_WS_FIB.cuh  AMHJ_cuckoo.cuh  AMHJ_open_addr.cuh  LFTJ.cuh  MHJ.cuh  MHJ_cuckoo.cuh  MHJ_open_addr.cuh
dependencies/hashjoins_ETH/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  depcomp  install-sh  pcm.cfg
dependencies/hashjoins_ETH/doc/: Doxyfile
dependencies/hashjoins_ETH/lib/.svn/: all-wcprops  entries
dependencies/hashjoins_ETH/lib/intel-pcm-1.7/: Doxyfile  license.txt  memoptest.cpp  pci.cpp  pcmdaemon.cpp
dependencies/hashjoins_ETH/lib/intel-pcm-1.7/.svn/: all-wcprops  entries
dependencies/hashjoins_ETH/lib/intel-pcm-1.7/.svn/text-base/: KSysGuard HOWTO.docx.svn-base  Makefile.svn-base  WINDOWS_HOWTO.rtf.svn-base  cpucounters.cpp.svn-base  cpucounters.h.svn-base  cpucounterstest.cpp.svn-base  cpusensor.cpp.svn-base  msr.cpp.svn-base  msr.h.svn-base  msrtest.cpp.svn-base  mytest.cpp.svn-base  pci.cpp.svn-base  pci.h.svn-base  readmem.cpp.svn-base  realtime.cpp.svn-base
dependencies/hashjoins_ETH/lib/intel-pcm-1.7/Intelpcm.dll/: Intelpcm.h  targetver.h
dependencies/hashjoins_ETH/lib/intel-pcm-1.7/Intelpcm.dll/.svn/: all-wcprops  entries
dependencies/hashjoins_ETH/lib/intel-pcm-1.7/Intelpcm.dll/.svn/text-base/: Intelpcm.cpp.svn-base  Intelpcm.h.svn-base  (+1 more)
dependencies/hashjoins_ETH/lib/intel-pcm-1.7/PCMService/: PCMInstaller.h  PCMService.h  PCMService.vcproj  resource.h
dependencies/hashjoins_ETH/lib/intel-pcm-1.7/PCMService/.svn/: all-wcprops  entries
dependencies/hashjoins_ETH/lib/intel-pcm-1.7/PCM_Win/: pcm.vcproj  stdafx.h  windriver.h
dependencies/hashjoins_ETH/lib/intel-pcm-1.7/PCM_Win/.svn/: all-wcprops  entries
dependencies/hashjoins_ETH/lib/intel-pcm-1.7/WinMSRDriver/.svn/: all-wcprops  entries
dependencies/hashjoins_ETH/lib/intel-pcm-1.7/WinMSRDriver/Win7/: msr.h  msrmain.c  msrstruct.h
dependencies/hashjoins_ETH/lib/intel-pcm-1.7/WinMSRDriver/WinXP/: msrmain.c
dependencies/hashjoins_ETH/lib/intel-pcm-1.7/winring0/.svn/: all-wcprops  entries
dependencies/hashjoins_ETH/src/: Makefile.am  Makefile.in  cpu-mapping.txt.README  cpu_mapping.c  cpu_mapping.h  generator.c  generator.h  main.c  no_partitioning_join.c  no_partitioning_join.h  npj_params.h  parallel_radix_join.c  parallel_radix_join.h  perf_counters.c  prj_params.h  test.cpp  types.h
dependencies/hashjoins_ETH/wisconsin-src/: README  affinitizer.cpp  cpu-mapping.txt.README  joinerfactory.cpp  joinerfactory.h  page.h  partitioner.h  prefetch.h  schema.cpp  system.inc  table.cpp
dependencies/hashjoins_ETH/wisconsin-src/.svn/: all-wcprops  entries
dependencies/hashjoins_ETH/wisconsin-src/.svn/text-base/: Makefile.svn-base  buffer.inl.svn-base  hash.cpp.svn-base  hash.h.svn-base  main-serial.cpp.svn-base  main.cpp.svn-base  page.cpp.svn-base  partitioner.cpp.svn-base  schema.h.svn-base  table.cpp.svn-base  table.h.svn-base
dependencies/hashjoins_ETH/wisconsin-src/algo/: algo.h  hashtable.cpp  nl.cpp  storage.cpp
dependencies/hashjoins_ETH/wisconsin-src/algo/.svn/: all-wcprops  entries
dependencies/hashjoins_ETH/wisconsin-src/algo/.svn/text-base/: build.inl.svn-base  hashtable.h.svn-base
dependencies/hashjoins_ETH/wisconsin-src/bzip2-1.0.5/: blocksort.c  bz-html.xsl  bzip2.c  bzlib.c  manual.ps  spewG.c  unzcrash.c
dependencies/hashjoins_ETH/wisconsin-src/bzip2-1.0.5/.svn/: all-wcprops  entries
dependencies/hashjoins_ETH/wisconsin-src/conf/: 000064_independent.conf  002048_parallel.conf  002048_radix1.conf  my_16_256zipf1_25.conf  my_no_u.conf
dependencies/hashjoins_ETH/wisconsin-src/conf/.svn/: all-wcprops  entries
dependencies/hashjoins_ETH/wisconsin-src/conf/.svn/text-base/: 000001_no.conf.svn-base  my_16_256_no.conf.svn-base  my_2048_radix1.conf.svn-base  my_no_pkfk.conf.svn-base
dependencies/hashjoins_ETH/wisconsin-src/datagen/.svn/: all-wcprops  entries
dependencies/hashjoins_ETH/wisconsin-src/datagen/.svn/text-base/: genprobe.py.svn-base
dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/: aclocal.m4  config.guess  configure  depcomp  install-sh  ltmain.sh  scanner.c
dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/.svn/: all-wcprops  entries
dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/debian/.svn/: all-wcprops  entries
dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/doc/: texinfo.tex
dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/doc/.svn/: all-wcprops  entries
dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/samples/.svn/: all-wcprops  entries
dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/samples/c/: stub.c
dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/samples/c++/: stubcpp.cpp
dependencies/topkapi/: CMakeLists.txt  HashFunction.cpp  HashFunction.h  LossyCountMinSketch.cpp  LossyCountMinSketch.h  Makefile  MurmurHash3.h  topkapi.cpp  topkapi.h
(+55 files in other folders)
