cmake_minimum_required(VERSION 3.9)
project(GPUOperators)

set(CMAKE_CXX_STANDARD 11)

include_directories(dependencies/moderngpu/src)
include_directories(common-utils)
include_directories(dependencies/cub/)
include_directories(dependencies/topkapi)

add_executable(GPUOperators
        common-utils/cuda/cuda_fake/fake.h
        common-utils/cuda/cuda_fake/fake_atomic.h
        common-utils/cuda/cuda_fake/fake_math.h
        common-utils/cuda/cuda_fake/fake_with_clang.h
        common-utils/cuda/CUDAStat.cuh
        dependencies/cub/experimental/histogram/histogram_cub.h
        dependencies/cub/experimental/histogram/histogram_gmem_atomics.h
        dependencies/cub/experimental/histogram/histogram_smem_atomics.h
        dependencies/cub/experimental/sparse_matrix.h
        dependencies/cub/test/half.h
        dependencies/cub/test/link_main.cpp
        dependencies/cub/test/mersenne.h
        dependencies/cub/test/test_util.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/Intelpcm.dll/dllmain.cpp
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/Intelpcm.dll/Intelpcm.cpp
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/Intelpcm.dll/Intelpcm.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/Intelpcm.dll/targetver.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/PCM_Win/pcm.cpp
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/PCM_Win/stdafx.cpp
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/PCM_Win/stdafx.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/PCM_Win/windriver.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/PCMService/AssemblyInfo.cpp
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/PCMService/PCMInstaller.cpp
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/PCMService/PCMInstaller.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/PCMService/PCMService.cpp
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/PCMService/PCMService.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/PCMService/resource.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/WinMSRDriver/Win7/msr.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/WinMSRDriver/Win7/msrmain.c
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/WinMSRDriver/Win7/msrstruct.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/WinMSRDriver/WinXP/msr.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/WinMSRDriver/WinXP/msrmain.c
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/WinMSRDriver/WinXP/msrstruct.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/winring0/OlsApi.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/winring0/OlsApiInit.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/winring0/OlsApiInitDef.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/winring0/OlsApiInitExt.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/winring0/OlsDef.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/cpuasynchcounter.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/cpucounters.cpp
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/cpucounters.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/cpucounterstest.cpp
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/cpusensor.cpp
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/memoptest.cpp
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/msr.cpp
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/msr.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/msrtest.cpp
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/mytest.cpp
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/pci.cpp
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/pci.h
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/pcmdaemon.cpp
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/readmem.cpp
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/realtime.cpp
        dependencies/hashjoins_ETH/lib/intel-pcm-1.7/types.h
        dependencies/hashjoins_ETH/src/affinity.h
        dependencies/hashjoins_ETH/src/barrier.h
        dependencies/hashjoins_ETH/src/cpu_mapping.c
        dependencies/hashjoins_ETH/src/cpu_mapping.h
        dependencies/hashjoins_ETH/src/generator.c
        dependencies/hashjoins_ETH/src/generator.h
        dependencies/hashjoins_ETH/src/genzipf.c
        dependencies/hashjoins_ETH/src/genzipf.h
        dependencies/hashjoins_ETH/src/lock.h
        dependencies/hashjoins_ETH/src/main.c
        dependencies/hashjoins_ETH/src/no_partitioning_join.c
        dependencies/hashjoins_ETH/src/no_partitioning_join.h
        dependencies/hashjoins_ETH/src/npj_params.h
        dependencies/hashjoins_ETH/src/npj_types.h
        dependencies/hashjoins_ETH/src/parallel_radix_join.c
        dependencies/hashjoins_ETH/src/parallel_radix_join.h
        dependencies/hashjoins_ETH/src/perf_counters.c
        dependencies/hashjoins_ETH/src/perf_counters.h
        dependencies/hashjoins_ETH/src/prj_params.h
        dependencies/hashjoins_ETH/src/rdtsc.h
        dependencies/hashjoins_ETH/src/task_queue.h
        dependencies/hashjoins_ETH/src/test.cpp
        dependencies/hashjoins_ETH/src/tuple_buffer.h
        dependencies/hashjoins_ETH/src/types.h
        dependencies/hashjoins_ETH/wisconsin-src/algo/algo.h
        dependencies/hashjoins_ETH/wisconsin-src/algo/base.cpp
        dependencies/hashjoins_ETH/wisconsin-src/algo/flatmem.cpp
        dependencies/hashjoins_ETH/wisconsin-src/algo/hashbase.cpp
        dependencies/hashjoins_ETH/wisconsin-src/algo/hashtable.cpp
        dependencies/hashjoins_ETH/wisconsin-src/algo/hashtable.h
        dependencies/hashjoins_ETH/wisconsin-src/algo/nl.cpp
        dependencies/hashjoins_ETH/wisconsin-src/algo/storage.cpp
        dependencies/hashjoins_ETH/wisconsin-src/bzip2-1.0.5/blocksort.c
        dependencies/hashjoins_ETH/wisconsin-src/bzip2-1.0.5/bzip2.c
        dependencies/hashjoins_ETH/wisconsin-src/bzip2-1.0.5/bzip2recover.c
        dependencies/hashjoins_ETH/wisconsin-src/bzip2-1.0.5/bzlib.c
        dependencies/hashjoins_ETH/wisconsin-src/bzip2-1.0.5/bzlib.h
        dependencies/hashjoins_ETH/wisconsin-src/bzip2-1.0.5/bzlib_private.h
        dependencies/hashjoins_ETH/wisconsin-src/bzip2-1.0.5/compress.c
        dependencies/hashjoins_ETH/wisconsin-src/bzip2-1.0.5/crctable.c
        dependencies/hashjoins_ETH/wisconsin-src/bzip2-1.0.5/decompress.c
        dependencies/hashjoins_ETH/wisconsin-src/bzip2-1.0.5/dlltest.c
        dependencies/hashjoins_ETH/wisconsin-src/bzip2-1.0.5/huffman.c
        dependencies/hashjoins_ETH/wisconsin-src/bzip2-1.0.5/mk251.c
        dependencies/hashjoins_ETH/wisconsin-src/bzip2-1.0.5/randtable.c
        dependencies/hashjoins_ETH/wisconsin-src/bzip2-1.0.5/spewG.c
        dependencies/hashjoins_ETH/wisconsin-src/bzip2-1.0.5/unzcrash.c
        dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/samples/c/sample1.c
        dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/samples/c/sample2.c
        dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/samples/c/sample3.c
        dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/samples/c/stub.c
        dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/samples/c++/sample1.cpp
        dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/samples/c++/sample2.cpp
        dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/samples/c++/sample3.cpp
        dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/samples/c++/stubcpp.cpp
        dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/grammar.c
        dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/grammar.h
        dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/libconfig.c
        dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/libconfig.h
        dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/libconfig.h++
        dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/libconfigcpp.c++
        dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/private.h
        dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/scanner.c
        dependencies/hashjoins_ETH/wisconsin-src/libconfig-1.2/scanner.h
        dependencies/hashjoins_ETH/wisconsin-src/affinitizer.cpp
        dependencies/hashjoins_ETH/wisconsin-src/affinitizer.h
        dependencies/hashjoins_ETH/wisconsin-src/atomics.h
        dependencies/hashjoins_ETH/wisconsin-src/Barrier.cpp
        dependencies/hashjoins_ETH/wisconsin-src/Barrier.h
        dependencies/hashjoins_ETH/wisconsin-src/bucket.h
        dependencies/hashjoins_ETH/wisconsin-src/comparator.cpp
        dependencies/hashjoins_ETH/wisconsin-src/comparator.h
        dependencies/hashjoins_ETH/wisconsin-src/custom_asserts.h
        dependencies/hashjoins_ETH/wisconsin-src/exceptions.h
        dependencies/hashjoins_ETH/wisconsin-src/hash.cpp
        dependencies/hashjoins_ETH/wisconsin-src/hash.h
        dependencies/hashjoins_ETH/wisconsin-src/joinerfactory.cpp
        dependencies/hashjoins_ETH/wisconsin-src/joinerfactory.h
        dependencies/hashjoins_ETH/wisconsin-src/loader.cpp
        dependencies/hashjoins_ETH/wisconsin-src/loader.h
        dependencies/hashjoins_ETH/wisconsin-src/lock.h
        dependencies/hashjoins_ETH/wisconsin-src/main-serial.cpp
        dependencies/hashjoins_ETH/wisconsin-src/main.cpp
        dependencies/hashjoins_ETH/wisconsin-src/multijoin-serial.cpp
        dependencies/hashjoins_ETH/wisconsin-src/multijoin.cpp
        dependencies/hashjoins_ETH/wisconsin-src/page.cpp
        dependencies/hashjoins_ETH/wisconsin-src/page.h
        dependencies/hashjoins_ETH/wisconsin-src/pagecursor.h
        dependencies/hashjoins_ETH/wisconsin-src/parser.cpp
        dependencies/hashjoins_ETH/wisconsin-src/parser.h
        dependencies/hashjoins_ETH/wisconsin-src/partitioner.cpp
        dependencies/hashjoins_ETH/wisconsin-src/partitioner.h
        dependencies/hashjoins_ETH/wisconsin-src/partitionerfactory.cpp
        dependencies/hashjoins_ETH/wisconsin-src/partitionerfactory.h
        dependencies/hashjoins_ETH/wisconsin-src/prefetch.h
        dependencies/hashjoins_ETH/wisconsin-src/ProcessorMap.cpp
        dependencies/hashjoins_ETH/wisconsin-src/ProcessorMap.h
        dependencies/hashjoins_ETH/wisconsin-src/query.h
        dependencies/hashjoins_ETH/wisconsin-src/rdtsc.h
        dependencies/hashjoins_ETH/wisconsin-src/schema.cpp
        dependencies/hashjoins_ETH/wisconsin-src/schema.h
        dependencies/hashjoins_ETH/wisconsin-src/table.cpp
        dependencies/hashjoins_ETH/wisconsin-src/table.h
        dependencies/topkapi/HashFunction.cpp
        dependencies/topkapi/HashFunction.h
        dependencies/topkapi/LossyCountMinSketch.cpp
        dependencies/topkapi/LossyCountMinSketch.h
        dependencies/topkapi/MurmurHash3.cpp
        dependencies/topkapi/MurmurHash3.h
        dependencies/topkapi/topkapi.cpp
        dependencies/topkapi/topkapi.h
        dependencies/cudpp/include/cudpp_hash.h
        others/SetIntersection.hpp
        others/LFTJChainCPU.cpp
        MHJ-CPU/MHJ.cpp
        MHJ-CPU/my_types.h
        MHJ-CPU/task_queue.h
        MHJ-CPU/types.h
        MHJ-GPU/cmake-build-debug/config.h
        MHJ-GPU/types.h
        common-utils/cuda/cuda_base.cuh
        common-utils/log.h
        others/bandwidth_test/stream.c
        others/common.h
        others/table.h
        others/testBinarySearchCPU.cpp
        others/testFullReducers.cpp
        others/testMultiJoin.cpp
        others/testOpenMP.cpp)
